--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -16,8 +16,8 @@
                       Activated="MainWindow_OnActivated"
                       Icon="../Resources/icon_64x64.ico"
                       ShowIconOnTitleBar="False"
-                      BorderThickness="0.5"
-                      GlowBrush="{DynamicResource AccentColorBrush}"
+                      BorderThickness="1"
+                      BorderBrush="{DynamicResource AccentColorBrush}"
                       Top="{Binding Config.WindowTop, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                       Left="{Binding Config.WindowLeft, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                       Width="{Binding Config.WindowWidth, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
